[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/closed_door.png" type="Texture" id=1]
[ext_resource path="res://ExitDoor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 3.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="ExitDoor" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ExitDoorZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoorZone"]
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="DoorCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorCollision"]
shape = SubResource( 2 )

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AudioTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="ExitDoorZone" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="timeout" from="AudioTimer" to="." method="_on_AudioTimer_timeout"]
